--- a/index.html
+++ b/index.html
@@ -40,44 +40,41 @@
        <div class="row">   
        <div class="col-md-12 col-sm-12">
         <span class="glyphicon glyphicon-bullhorn-align-center" aria-hidden="true"></span>
-        <form target="_self" onsubmit="" action="javascript: postContactToGoogle()">
-         <div class="form-group ">
-          <label class="control-label requiredField" for="firstName">
+        <form action="https://docs.google.com/forms/d/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
+         <div class="form-group ss-form ss-form-entry">
+          <label class="control-label requiredField ss-q-item-label" for="entry_782195284">
            First Name
-           <span class="asteriskField">
+           <span class="asteriskField ss-required-asterisk">
             *
            </span>
           </label>
-          <input class="form-control" id="firstName" name="name" type="text"/>
+          <input class="form-control ss-q-short" id="entry_782195284" name="entry.782195284" value=""type="text"/>
          </div>
          <div class="form-group ">
-          <label class="control-label requiredField" for="lastName">
+          <label class="control-label requiredField ss-q-item-label" for="entry_1798359106">
            Last Name
-           <span class="asteriskField">
+           <span class="asteriskField ss-required-asterisk">
             *
            </span>
           </label>
-          <input class="form-control" id="lastName" name="lastName" type="text"/>
+          <input class="form-control ss-q-short" id="entry_1798359106" name="entry.1798359106" value="" type="text"/>
          </div>
          <div class="form-group ">
-          <label class="control-label requiredField" for="email">
+          <label class="control-label requiredField ss-q-item-label" for="entry_289799160">
            Email
-           <span class="asteriskField">
+           <span class="asteriskField ss-required-asterisk">
             *
            </span>
           </label>
-          <input class="form-control" id="email" name="email" type="text"/>
+          <input class="form-control ss-q-short" id="entry_289799160" name="entry.289799160" value="" type="text"/>
          </div>
          <div class="form-group">
           <div>
-           <button class="btn btn-primary " name="submit" type="submit">
+           <button class="btn btn-primary jfk-button jfk-button-action" id="ss-submit" name="submit" type="submit">
            Add Your Name
            </button>
           </div>
          </div>
-          <div style="width: 100%; display: block; float: right; padding-top: 15px;">
-            <div class="requestSubmited" style="display:none; text-align: center;">Your name has been added!</div>
-        </div>
        </div>
     </form>
   </div>
@@ -85,44 +82,5 @@
   </div>
 
 </div>
-
-    <script type="text/javascript">
-    function validateEmail(email) {
-        var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-        return re.test(email);
-    }"
-
-    function postContactToGoogle(){
-        var firstName = $j('#firstName').val();
-        var lastName = $j('#lastName').val();
-        var email = $j('#email').val();
-        if ((name !== "") && (email !== "") && ((feed !== "") && (validateEmail(email)))) {
-            $j.ajax({
-                url: "https://docs.google.com/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/formResponse",
-                data: {"entry.1" : firstName, "entry.2" : lastName,  "entry.3" : email},
-                type: "POST",
-                dataType: "xml",
-                statusCode: {
-                    0: function (){
- 
-                        $j('#firstName').val("");
-                        $j('#lastName').val("");
-                        $j('#email').val("");
-                        //Success message
-                    },
-                    200: function (){
-                        $j('#firstName').val("");
-                        $j('#lastName').val("");
-                        $j('#email').val("");
-                        //Success Message
-                    }
-                }
-            });
-        }
-        else {
-            //Error message
-        }
-    }
-</script>
 </body>
 </html>
