Fixed submit button

--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
          </div>
          <div class="form-group">
           <div>
-           <button class="btn btn-primary jfk-button jfk-button-action" id="ss-submit" name="submit" type="submit">
-           Add Your Name
-           </button>
+           <input type="submit" name="submit" value="Add Your Name" id="ss-submit" class="btn btn-primary jfk-button jfk-button-action ">
+          
           </div>
          </div>
        </div>
