--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </label>
           <input class="form-control ss-q-short" id="entry_289799160" name="entry.289799160" value="" type="text"/>
          </div>
-         <div class="form-group">
+         <div class="form-group ss-form-entry goog-inline-block" id="navigation-buttons">
           <div>
            <input type="submit" name="submit" value="Add Your Name" id="ss-submit" class="btn btn-primary jfk-button jfk-button-action ">
           
