2nd attempt to fix redirect on submission

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 </div>
 <script>
-    $("#ss-form").submit(function(e) {
+    $("#ss-submit").submit(function sendForm(e) {
         e.preventDefault();
         $.ajax({
             url: "https://docs.google.com/forms/d/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/formResponse",
