Creating success message after submission.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
          <div class="form-group ss-form-entry goog-inline-block" id="navigation-buttons">
           <div>
            <input type="submit" name="submit" value="Add Your Name" id="ss-submit" class="btn btn-primary jfk-button jfk-button-action ">
-          
           </div>
          </div>
+         <div id="msgSubmit" class="h3 text-center hidden">Thank you! Your name has been added to the petition.</div>
        </div>
     </form>
   </div>
@@ -84,17 +84,20 @@
 <script>
     $("#ss-submit").submit(function sendForm(e) {
         e.preventDefault();
+        submitForm();
         $.ajax({
             url: "https://docs.google.com/forms/d/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/formResponse",
             data: $(this).serialize(),
             type: "POST",
             dataType: "xml",
-            success: function(data) {
-                console.log('Thank you! Your name has been added.');
-            },
-            error: function(xhr, status, error) {
-                console.log('Submission failed: ' + error);
+            success: function(text) {
+               if (text == "success"){
+                formSuccess();
+                }
             }
+        function formSuccess(){
+    $( "#msgSubmit" ).removeClass( "hidden" );
+}    
         });
     });
 </script>
