Correction console log after submission.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             type: "POST",
             dataType: "xml",
             success: function(data) {
-                console.log('Thank you! Your name has been added.');
+                console.log('Submission successful');
             },
             error: function(xhr, status, error) {
                 console.log('Submission failed: ' + error);
