--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <div class="row">   
        <div class="col-md-12 col-sm-12">
         <span class="glyphicon glyphicon-bullhorn-align-center" aria-hidden="true"></span>
-        <form action="https://docs.google.com/a/demos.org/forms/d/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/viewform" method="POST" id="ss-form" target="_self" onsubmit="">
+        <form action="https://docs.google.com/forms/d/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
          <div class="form-group ss-form ss-form-entry">
           <label class="control-label requiredField ss-q-item-label" for="entry_782195284">
            First Name
