--- a/nameAdded.html
+++ b/nameAdded.html
@@ -30,7 +30,7 @@
  </div>
  <div class="col-md-1 col-sm-1"></div>
    <div class="col-md-6 col-sm-6">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <h4>Sign the Petition</h4>
       </div>
@@ -39,42 +39,7 @@
         <p class="lead">Sign an executive order to make taxpayer-subsidized companies accountable for their political spending.</p>
        <div class="row">   
        <div class="col-md-12 col-sm-12">
-        <span class="glyphicon glyphicon-bullhorn-align-center" aria-hidden="true"></span>
-        <form action="https://docs.google.com/forms/d/13pvS20oy6HS_fHnI3B_6nW4lSO6SMv2c8AyOuHPMJ9Y/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
-         <div class="form-group ss-form ss-form-entry">
-          <label class="control-label requiredField ss-q-item-label" for="firstName">
-           First Name
-           <span class="asteriskField ss-required-asterisk">
-            *
-           </span>
-          </label>
-          <input class="form-control ss-q-short" id="firstName" name="firstName" value=""type="text"/>
-         </div>
-         <div class="form-group ">
-          <label class="control-label requiredField ss-q-item-label" for="lastName">
-           Last Name
-           <span class="asteriskField ss-required-asterisk">
-            *
-           </span>
-          </label>
-          <input class="form-control ss-q-short" id="lastName" name="lastName" value="" type="text"/>
-         </div>
-         <div class="form-group ">
-          <label class="control-label requiredField ss-q-item-label" for="email">
-           Email
-           <span class="asteriskField ss-required-asterisk">
-            *
-           </span>
-          </label>
-          <input class="form-control ss-q-short" id="email" name="email" value="" type="text"/>
-         </div>
-         <div class="form-group ss-form-entry goog-inline-block" id="navigation-buttons">
-          <div>
-           <button id="ButtonSubmit" type="button" class="btn btn-primary"onclick="postContactToGoogle()" >Add Your Name</button>
-          </div>
-         </div>
-       </div>
-    </form>
+        <p>Thank you for adding your name!</p>
   </div>
    </div>
   </div>
