--- a/index.html
+++ b/index.html
@@ -80,5 +80,7 @@
   </div>
 </div>
 <script src="script.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.0.js"></script>
+<script type="text/javascript"></script>
 </body>
 </html>
