--- a/nameAdded.html
+++ b/nameAdded.html
@@ -37,7 +37,7 @@
       <div class="panel-body">
         <h2>President Obama:</h2>
         <p class="lead">Sign an executive order to make taxpayer-subsidized companies accountable for their political spending.</p>
-        <p class="lead"><mark>Thank you for adding your name!</mark></p>
+        <h3><mark>Thank you for adding your name!</mark></h3>
        <div class="row">   
        <div class="col-md-12 col-sm-12">
         <span class="glyphicon glyphicon-bullhorn-align-center" aria-hidden="true"></span>
