Moving success message next to button

--- a/nameAdded.html
+++ b/nameAdded.html
@@ -37,7 +37,6 @@
       <div class="panel-body">
         <h2>President Obama:</h2>
         <p class="lead">Sign an executive order to make taxpayer-subsidized companies accountable for their political spending.</p>
-        <h4><mark>Thank you for adding your name!</mark></h4>
        <div class="row">   
        <div class="col-md-12 col-sm-12">
         <span class="glyphicon glyphicon-bullhorn-align-center" aria-hidden="true"></span>
@@ -71,7 +70,7 @@
          </div>
          <div class="form-group ss-form-entry goog-inline-block" id="navigation-buttons">
           <div>
-           <button id="ButtonSubmit" type="button" class="btn btn-success"onclick="postContactToGoogle()" >Add Your Name</button>
+           <button id="ButtonSubmit" type="button" class="btn btn-success"onclick="postContactToGoogle()" >Add Your Name</button> <h4 style="display: inline; margin-left: 15px; vertical-align: middle;"><mark>Thank you for adding your name!</mark></h4>
           </div>
          </div>
        </div>
