--- a/nameAdded.html
+++ b/nameAdded.html
@@ -70,7 +70,7 @@
          </div>
          <div class="form-group ss-form-entry goog-inline-block" id="navigation-buttons">
           <div>
-           <button id="ButtonSubmit" type="button" class="btn btn-success"onclick="postContactToGoogle()" >Add Your Name</button> <h4 style="display: inline; margin-left: 15px; vertical-align: middle; font-size: 18px;"><mark>Thank you for adding your name!</mark></h4>
+           <button id="ButtonSubmit" type="button" class="btn btn-success"onclick="postContactToGoogle()" >Add Your Name</button> <h4 style="display: inline; margin-left: 15px; vertical-align: middle; font-size: 18px;"><mark>Thanks for adding your name!</mark></h4>
           </div>
          </div>
        </div>
